--- a/ShopApp.WebUI/package.json
+++ b/ShopApp.WebUI/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "bootstrap": "4.3.1"
+    "bootstrap": "4.5.0",
+    "jquery": "3.5.1"
   }
 }
