category and product updated basic validation

--- a/ShopApp.WebUI/package.json
+++ b/ShopApp.WebUI/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {},
   "dependencies": {
     "bootstrap": "4.5.0",
-    "jquery": "3.5.1"
+    "jquery": "3.5.1",
+    "jquery-validation": "1.19.2",
+    "jquery-validation-unobtrusive": "3.2.11"
   }
 }
