account controller email sender Tempdata config Admin role

--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -2,6 +2,21 @@
   "ConnectionStrings": {
     "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ShopDb;integrated security=true;"
   },
+  "Data": {
+    "AdminUser": {
+      "username": "admin",
+      "password": "Adminuser_1234",
+      "email": "adminuser@shopapp.com",
+      "role": "admin"
+    }
+  },
+  //"EmailSender": {
+  //  "Host": "smtp.yourprovider.com",
+  //  "Port": 587,
+  //  "EnableSSL": true,
+  //  "UserName": "your@username.com",
+  //  "Password": "Y0urP4ssw0rd!!!"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
