--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -10,13 +10,13 @@
       "role": "admin"
     }
   },
-  //"EmailSender": {
-  //  "Host": "smtp.yourprovider.com",
-  //  "Port": 587,
-  //  "EnableSSL": true,
-  //  "UserName": "your@username.com",
-  //  "Password": "Y0urP4ssw0rd!!!"
-  //},
+  "EmailSender": {
+    "Host": "srvm04.turhost.com",
+    "Port": 587,
+    "EnableSSL": false,
+    "UserName": "bilgilendirme@emrahsemiz.com.tr",
+    "Password": "080912088Es"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
