--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ShopDb;integrated security=true;"
+    "IdentityConnection": "Server=37.230.108.247;Database=emrahse1_myLibrary;user id=emrahse1_emrah;password=080912088Es!;"
   },
   "Data": {
     "AdminUser": {
